--- a/package.json
+++ b/package.json
@@ -1,44 +1,67 @@
 {
   "name": "zk-bridge-v2",
   "packageManager": "yarn@3.3.0",
+  "scripts": {
+    "deploy:bscTest": "hardhat run --network bscTest scripts/deploy.ts",
+    "deploy:goerli": "hardhat run --network goerli scripts/deploy.ts",
+    "deploy:tomoTest": "hardhat run --network tomoTest scripts/deploy.ts",
+    "deploy:fuji": "hardhat run --network fuji scripts/deploy.ts",
+    "upgrade:bscTest": "hardhat run --network bscTest scripts/upgrade.ts",
+    "upgrade:goerli": "hardhat run --network goerli scripts/upgrade.ts",
+    "upgrade:tomoTest": "hardhat run --network tomoTest scripts/upgrade.ts",
+    "verify:bscTest": "hardhat verify --network bscTest",
+    "verify:fuji": "hardhat verify --network fuji",
+    "verify:bsc": "hardhat verify --network bsc",
+    "verify:goerli": "hardhat verify --network goerli",
+    "verify:tomoTest": "hardhat verify --network tomoTest",
+    "help:hre": "hardhat help",
+    "size": "hardhat size-contracts",
+    "sol:prettier": "prettier --config ./.prettierrc.yml --write ./contracts -l",
+    "prettier": "prettier --config ./.prettierrc.yml --write \"**/*.{js,json,md,sol,ts,yml}\"",
+    "clean": "hardhat clean",
+    "compile": "prettier --write ./contracts -l && cross-env TS_NODE_TRANSPILE_ONLY=true hardhat compile && solhint --config ./.solhint.json -f table ./contracts/**/*.sol -f table ./contracts/*.sol",
+    "node": "hardhat node",
+    "test": "hardhat test --network hardhat"
+  },
   "devDependencies": {
-    "@chainlink/contracts": "^0.5.1",
+    "@chainlink/contracts": "^0.6.0",
+    "@ethereumjs/trie": "^5.0.2",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.5",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@openzeppelin/contracts": "^4.8.0",
-    "@openzeppelin/contracts-upgradeable": "^4.8.0",
-    "@openzeppelin/hardhat-upgrades": "^1.21.0",
-    "@remix-project/remixd": "^0.6.8",
+    "@openzeppelin/contracts": "^4.8.1",
+    "@openzeppelin/contracts-upgradeable": "^4.8.1",
+    "@openzeppelin/hardhat-upgrades": "^1.22.0",
+    "@remix-project/remixd": "^0.6.10",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
     "@types/mocha": "^10.0.1",
     "@uniswap/v2-core": "^1.0.1",
     "@zk-kit/incremental-merkle-tree": "^1.0.0",
     "chai": "^4.3.7",
-    "circomlib": "2.0.2",
+    "circomlib": "^2.0.5",
     "circomlibjs": "^0.1.7",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "fs-extra": "^11.1.0",
-    "hardhat": "^2.12.4",
-    "hardhat-contract-sizer": "^2.6.1",
+    "hardhat": "^2.12.6",
+    "hardhat-contract-sizer": "^2.7.0",
     "hardhat-gas-reporter": "^1.0.9",
     "merkletreejs": "^0.3.9",
     "oz-custom": "^1.1.5-e",
-    "prettier": "^2.8.1",
-    "prettier-plugin-solidity": "^1.1.0",
+    "prettier": "^2.8.3",
+    "prettier-plugin-solidity": "^1.1.1",
     "snarkjs": "^0.5.0",
     "solhint": "^3.3.7",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^4.9.4",
-    "yarn-upgrade-all": "^0.7.1"
+    "yarn-upgrade-all": "^0.7.2"
   }
 }
