--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "hardhat-contract-sizer": "^2.7.0",
     "hardhat-gas-reporter": "^1.0.9",
     "merkletreejs": "^0.3.9",
-    "oz-custom": "^1.1.5-e",
+    "oz-custom": "1.1.5-f-beta-2",
     "prettier": "^2.8.3",
     "prettier-plugin-solidity": "^1.1.1",
     "snarkjs": "^0.5.0",
