tmp: temporal commit

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "hardhat test --network hardhat"
   },
   "devDependencies": {
-    "@chainlink/contracts": "^0.6.0",
+    "@chainlink/contracts": "^0.6.1",
     "@ethereumjs/trie": "^5.0.2",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
@@ -34,8 +34,8 @@
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.8.1",
     "@openzeppelin/contracts-upgradeable": "^4.8.1",
-    "@openzeppelin/hardhat-upgrades": "^1.22.0",
-    "@remix-project/remixd": "^0.6.10",
+    "@openzeppelin/hardhat-upgrades": "^1.22.1",
+    "@remix-project/remixd": "^0.6.11",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
     "@types/mocha": "^10.0.1",
@@ -47,21 +47,21 @@
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.2",
+    "ethers": "^6.0.2",
     "fs-extra": "^11.1.0",
     "hardhat": "^2.12.6",
-    "hardhat-contract-sizer": "^2.7.0",
+    "hardhat-contract-sizer": "^2.8.0",
     "hardhat-gas-reporter": "^1.0.9",
     "merkletreejs": "^0.3.9",
-    "oz-custom": "1.1.5-f-beta-2",
+    "oz-custom": "^1.1.6",
     "prettier": "^2.8.3",
-    "prettier-plugin-solidity": "^1.1.1",
+    "prettier-plugin-solidity": "^1.1.2",
     "snarkjs": "^0.5.0",
-    "solhint": "^3.3.7",
+    "solhint": "^3.3.8",
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
     "yarn-upgrade-all": "^0.7.2"
   }
 }
